    - Changed the rocket capacities of all coins to their respective stack sizes.
    - Dungeon hex cores now spawn immediately when the dungeon generates, giving them a glow.
    - The quest "Biter Rammer" now also gives 50 magmatic round magazines as a reward.
    - Moved some of the starting trades on Nauvis to adjacent hexes.
  Bugfixes:
    - Fixed that dungeons invisibly occupied some hexes just outside of themselves, preventing you from claiming them.
    - Fixed that hex cores did not correctly show whether the hexports were currently enabled.
    - Fixed crash on running the command /hextorio-debug when in remote view.
    - Fixed that updating the mod settings for planet-based trade productivity bonuses would not take effect without a restart.
    - Fixed floating point rounding errors around 0 for trade productivity.
    - Fixed that item-giving quests would not drop a remainder of a stack if the inventory is nearly full instead of only dropping entire stacks that wouldn't fit.
  Gui:
    - Trade arrows display nonzero productivity without mousing over them.
    - Softened the white and cyan trade arrow sprites.
    - Removed the boxes around each trade, de-cluttering the hex core GUI and trade overview.
    - Moved the trade arrow's tooltip to a more obvious location that's below the trade, having the sprite of a productivity module.
    - Added button for pinging trades.
  Optimizations:
    - Optimized dungeon turret reloading.
    - Optimized ahead-of-time chunk generation around players.
  Translation:
    - Added Polish translations.
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 21/11/25
  Major Features:
    - Added item buffs to most items, unlocked and upgraded in the Catalog.
        Unlocking and enhancement difficulty is configurable with two new settings, "Item Buff Cost Scale" and "Item Buff Cost Base".