@@ -40,6 +40,8 @@ Date: 21/11/25
     - Dungeon hex cores now spawn immediately when the dungeon generates, giving them a glow.
     - The quest "Biter Rammer" now also gives 50 magmatic round magazines as a reward.
     - Moved some of the starting trades on Nauvis to adjacent hexes.
+    - Hexports are no longer enabled globally upon unlocking them and instead require toggling each one, most easily done via the hexport tool.
+        Hexports still automatically toggle on for newly claimed hexes.
   Bugfixes:
     - Fixed that dungeons invisibly occupied some hexes just outside of themselves, preventing you from claiming them.
     - Fixed that hex cores did not correctly show whether the hexports were currently enabled.
